tests/ui/derive-invariant/helper-no-expr/expected
error: Cannot derive impl for `PositivePoint`
   |
| #[derive(kani::Invariant)]
   |          ^^^^^^^^^^^^^^^
   |
note: safety constraint in field `x` could not be parsed: unexpected end of input, expected an expression
